--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -7,8 +7,11 @@
 .title {
   display: flex;
   justify-content: center;
-  color: rgb(237, 105, 23);
+  color: #2ee59d;
   margin-top: 0;
   padding: 30px;
   font-size: 50px;
+}
+.link{
+  color: #2ee59d;
 }
