--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,33 +1,20 @@
-.user_posts_container {
+.input_area {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-}
-.title {
-  color: #2ee59d;
-  font-size: 40px;
-  margin-bottom: 2px;
-}
-
-.user_post {
-  width: 80%;
-  align-items: center;
-  margin-right: auto;
-  margin-left: auto;
-  border: 1px solid black;
-  margin-top: 20px;
-  padding: 10px;
-  background-color: rgb(116, 111, 108);
-}
-.wrap {
-  height: 100%;
-  display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-
-button {
+.title_input {
+  width: 30vw;
+}
+.body_input {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 30vw;
+  height: 200px;
+}
+.submit_btn {
   width: 140px;
   height: 45px;
   font-family: "Roboto", sans-serif;
@@ -43,14 +30,14 @@ button {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-button:hover {
+.submit_btn:hover {
   background-color: #2ee59d;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
   transform: translateY(-7px);
-}
-.post_title {
-  color: #e6f4e8;
 }
