--- a/src/components/UserPosts.css
+++ b/src/components/UserPosts.css
@@ -1,28 +1,37 @@
-.comment_info {
-  background-color: rgb(116, 111, 108);
-  width: 80%;
-  padding: 20px;
-  border: 1px solid black;
-  margin-top: 20px;
-}
-
-.comments {
+.user_posts_container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
+  flex-direction: column;
 }
-.name {
-  color: #e6f4e8;
+.title {
+  color: #2ee59d;
+  font-size: 40px;
+  margin-bottom: 2px;
 }
-.buttons {
+a {
+  color: #2ee59d;
+}
+.user_post {
+  width: 80%;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  border: 1px solid black;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: rgb(116, 111, 108);
+}
+.wrap {
+  height: 100%;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-button {
-  width: 100px;
-  height: 40px;
+
+.wrap a {
+  width: 140px;
+  height: 45px;
   font-family: "Roboto", sans-serif;
   font-size: 11px;
   text-transform: uppercase;
@@ -39,12 +48,14 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px;
 }
 
-button:hover {
+.wrap a:hover {
   background-color: #2ee59d;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
   transform: translateY(-7px);
+}
+.post_title {
+  color: #e6f4e8;
 }
