--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -1,7 +1,9 @@
 .user_container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 10px;
+  width: 70%;
+  margin: auto;
 }
 
 .title {
@@ -12,6 +14,9 @@
   padding: 30px;
   font-size: 50px;
 }
-.link{
+.link {
   color: #2ee59d;
+}
+.user_list_container {
+  width: 100%;
 }
