--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,7 +1,14 @@
 .user_details {
   background-color: rgb(116, 111, 108);
-  padding: 30px;
+  padding: 10px;
   border: 1px solid black;
+  border-radius: 15px;
+  transition: transform 500ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
+.user_details:hover {
+  cursor: pointer;
+  box-shadow: 1px 1px 10px #e7fefa;
+  transform: scale(1.09);
 }
 .user_name {
   color: #e6f4e8;
